# DropletQCpy

./: LICENSE  README.md  pyproject.toml
dropletqcpy/: __init__.py  bam_counter.py  damaged_cells.py  empty_droplets.py  nuclear_fraction.py
tests/: test_dropletqcpy.py
