[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropletqcpy"
version = "0.1.0.dev0"
description = "Independent Python reimplementation of the DropletQC methodology for single-cell RNA-seq quality control"
readme = "README.md"
license = "MIT"
authors = [
    { name = "dropletqcpy contributors" }
]
keywords = ["single-cell", "RNA-seq", "quality-control", "bioinformatics", "scanpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "anndata>=0.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
loom = [
    "loompy>=3.0",
]
bam = [
    "pysam>=0.21",
]
plot = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
all = [
    "dropletqcpy[loom,bam,plot,dev]",
]

[project.urls]
"Bug Tracker" = "https://github.com/yourname/dropletqcpy/issues"
"Source" = "https://github.com/yourname/dropletqcpy"

[tool.setuptools.packages.find]
where = ["."]
include = ["dropletqcpy*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dropletqcpy --cov-report=term-missing"
